--- a/VRChat/88/1041488.html
+++ b/VRChat/88/1041488.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hrF+i/gVw4H0FiK+BRGA+Z87qAMmLiFz9/ZafnjsniI="></script>
+    "nznTS9XtbD4VKHu6ki3vlgSpyEqPZgWdROA6paeBJLQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ZKトールマンとおまけのわんちゃん","description":"私の動画にでてくる奴ら\n\nVRChatでの使用はそこまで想定していませんがVRChatでもまあまあ使える３Dモデルです。\nZKトールマンは△19709\nINUは△19878ガトリング砲ありで△22918です。\n\n利用規約\n　・著作権は作者である美羽_C.フレール（@MFreru）が保有しています。\n\n　・以下のような使用を禁止致します。\n　　×公序良俗に反する利用\n　　×政治的・宗教的主張に関する利用\n　　×再配布・再販売\n　　×自作発言等\n\n　・モデル改変・営利利用可能です。\n\n　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属するいかなる団体も、一切の責任を負わないものとします。\n\n","url":"https://booth.pm/ja/items/1041488","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bba5e0f7-99ce-4f4d-8fb1-16f4d8e54eea/i/1041488/106e553f-abf6-438c-be4a-504aa31abb70_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hrF+i/gVw4H0FiK+BRGA+Z87qAMmLiFz9/ZafnjsniI="></script>
+    nonce="nznTS9XtbD4VKHu6ki3vlgSpyEqPZgWdROA6paeBJLQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1041488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1041488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
