--- a/VRChat/31/1041431.html
+++ b/VRChat/31/1041431.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zLy624wsdtJF+bfW16bJU7NPl+N6+i20kRI4O3PLvE0="></script>
+    "XL+mdFaZ5ym5CZY+XzzcwDbZPPH/7mkPZExCjIDo9l0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サングラス(鼻眼鏡)","description":"マトリックスのモーフィアス風サングラスです。鼻メガネなのでテンプルがありません。レンズに反射するようになっています。フレンドからも見えますよ。\nhow toフォルダを参考に設定するとサムネイルのようなサングラスを使えます。\nレンズ部分の透け具合はシェーダーの色で調節してください。\nお使いのモデルに合わない場合は、拡縮したり改変したりして利用してください。\n\n352三角\n\nhow to/\nnose glasses.unitypackage\nlicense\nshader.txt\n\n購入の前にライセンスを読んでください。→ https://www.yukiyukivirtual.net/license/#1.md","url":"https://booth.pm/ja/items/1041431","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1041431/34d6b132-1bd8-4c0e-b06b-3714e25cc0c2_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zLy624wsdtJF+bfW16bJU7NPl+N6+i20kRI4O3PLvE0="></script>
+    nonce="XL+mdFaZ5ym5CZY+XzzcwDbZPPH/7mkPZExCjIDo9l0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1041431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1041431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
