--- a/VRChat/14/1041314.html
+++ b/VRChat/14/1041314.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "S4SG9hIBYtJGG/YG+9F+hT2niPh14XvCM72Tssew+Jg="></script>
+    "IY5g3R1xquaQUOmD4v8v76NPhsQjr3j4C1gsay87km8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatオリジナルアバター】いたずらメルヴィー ver3.1.0 Avatars3.0版【MDollnail対応】","description":"※当モデルの最終更新日は2021/10/31です。それ以降にリリースされた独自機能（VCC等）には現状非対応であり、アップロードマニュアル等も更新できておりません。\n※当モデルは、現状、PhysBones3非対応です※\n\n\nポリゴン数…～△20377\nVRChatでの利用を想定したUnity Humanoidモデルです。（Quest非対応）\n当モデルはDynamic Boneに対応しています。\n\n\n【利用規約】\n同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。\nhttp://minuetdoll.info/3d/　　　　　　（日本語）\nhttp://minuetdoll.info/3d/english.htm　(English)\n\n当モデルのネイル部分には、私Minuet_DollがBOOTHにて販売中の\n汎用ジェルネイル『MDollnail』（#MD_nail）のメッシュ・テクスチャを利用しています。\nhttps://minuetdoll.booth.pm/items/3114352\n\n\n【アップロード方法・その他仕様】\n同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。\nhttps://minuetdoll.info/manual/Mervi_Avatars3.0_manual/\n\nVRChatやUnityのアップデートの影響で従来通りアップロードできなくなった場合は、下記URLをご確認ください。\nhttps://note.com/minuet_doll/n/ne16c3ea79548\n\n\n【シェーダーについて】\n各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。\n\n・ユニティ・テクノロジーズ・ジャパン合同会社様の「ユニティちゃんトゥーンシェーダー Ver.2.0.8」\nhttp://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n【内容】\n\nMD_Mervi_ver3.1.0_Avatars3.0\n├ license（テキスト版利用規約及び同梱させて頂いたシェーダー、その他ツールのライセンス）\n├ VRM（VRM化したモデルが入っています）\n｜ Minuet_Doll 3D Model Terms(Online_Japanese)（ご利用の際は最新の利用規約をご覧ください）\n｜ Minuet_Doll 3D Model Terms(English)（上記利用規約の英語版です）\n｜ Readme.txt（このファイル）\n｜ Upload Manual（モデルアップロードの際にはご活用ください）\n└ MD_Mervi_ver3.1.0.unitypackage（本体）\n\n\n【更新履歴】\n2021/10/31  ver3.1.0 Avatars3.0に対応しました。MDollnail対応になりました。\n2018/12/27　ver1.2　足の捻じれを修正しました。モデルの一部が消える不具合を修正しました。\n2018/12/12　ver1.1　Unity2017.4に対応しました。フルトラッキングに対応しました。スケールの追加をしました。足首の構造を修正しました。\n2018/10/08　ver1.0　販売開始\n\n\n【制作】\nMinuet_Doll\nhttp://minuetdoll.info/\nhttps://twitter.com/Minuet_Doll\nhttps://minuetdoll.fanbox.cc/","url":"https://booth.pm/ja/items/1041314","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="S4SG9hIBYtJGG/YG+9F+hT2niPh14XvCM72Tssew+Jg="></script>
+    nonce="IY5g3R1xquaQUOmD4v8v76NPhsQjr3j4C1gsay87km8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1041314/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               607
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1041314/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               607
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
