--- a/VRChat/07/1039807.html
+++ b/VRChat/07/1039807.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Mfejp9MeyDB9tO+eXgWljVA2qaJnVqLRgNAQyvDc8ok="></script>
+    "rYCLT6ZfTwEcAQNFVG8XR4vDGgLKdx/az89+UsNtZSo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル 焚き火で焼き芋セット","description":"■概要\n\nそろそろ秋ですね！\n今回は焚き火と焼き芋の３Dモデルのセットです。\nプレハブ化しているのですぐ使えます！\nスタンダードアセットよりパーティクルシステム（スモーク・スパーク）使用。\n制作：さかにゃ\n\n\n\n■使い方\n\nキャラクターに持たせたりワールドに設置したり等、ご自由にお使いください。\n\n\n\n■内容物\n\n焼き芋セット（FBXファイル）\nセッティング済み焚き火（プレハブ）\n串刺し焼き芋（プレハブ）\nさつまいも（プレハブ）\nはんぶんこ用さつまいも（プレハブ）\n\n\n\n■利用・改変に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\n\n\n\n■著作権について\n\n配布物に含まれるすべてのデータの著作権はデータの製作者であるさかにゃとみこさくに帰属するものとします。\n\n\n\n■制限事項・免責事項\n\n本データの二次配布は改造・未改造問わず禁止します。\nまた本データの利用によって生じるいかなる損害に対し、\n当方は一切の責任を負わないものとします。\n節度をもってご利用ください。","url":"https://booth.pm/ja/items/1039807","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1039807/af585be9-c27d-4488-936b-b42395f54f18_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Mfejp9MeyDB9tO+eXgWljVA2qaJnVqLRgNAQyvDc8ok="></script>
+    nonce="rYCLT6ZfTwEcAQNFVG8XR4vDGgLKdx/az89+UsNtZSo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1039807/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1039807/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
