--- a/VRChat/84/1039784.html
+++ b/VRChat/84/1039784.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TVqeUY1VaECMrc47ypOLjKURtq0WpmyjJOpg4FCQLzw="></script>
+    "MlZ4x4fIr7NtP2NQD4tkji9Fk77RG8AxAH29b1EFSRk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あいどるまいく","description":"マイクです！\n\n★推奨するもの\n・VRChat含め、ゲームでの使用\n・モデル改変（いかなる改変もどうぞ）","url":"https://booth.pm/ja/items/1039784","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b7fca586-9480-45da-aff4-af2714c85b09/i/1039784/78b8a4d0-e073-4e61-8b6e-8c72380aece0_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TVqeUY1VaECMrc47ypOLjKURtq0WpmyjJOpg4FCQLzw="></script>
+    nonce="MlZ4x4fIr7NtP2NQD4tkji9Fk77RG8AxAH29b1EFSRk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1039784/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1039784/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
