--- a/VRChat/33/1373933.html
+++ b/VRChat/33/1373933.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q5XdKCWVoelMBpQUzDsH/GQecBUmEbnFTG9R/TthVfk="></script>
+    "66gWS/mksLr0wqutwQQN/KoVVVBhEYqLQ6GhyrEFpWg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル「和傘」","description":"試作の和傘です。基本無料\nシェイプキー1を100にすると閉じます。\nポリ数：3240\n\nダウンロードをした時点で以下の規約に同意したとみなします。\n\nやっていいこと\n・改変\n・アバターに持たせること（ペデスタルアバターへの使用可）\n・ワールドに置くこと\n・個人・商用問わず何かしらのゲームに組み込む事\n\nやってはいけないこと\n・特定の宗教、信条、政治関連に関わる作品、行動に使う事\n・他人への誹謗中傷に使う事\n・R-18、R-18G作品や行動への使用\n・自作したと偽ること　著作権は放棄していません。\n\nこのデータを使用して何らかのトラブルや不具合が生じても、Lermiteは何ら責任を負いません。\n上記で禁止した事項を行った場合、利用許諾は消えるものとし、違反者は著作権法で裁けるものとします。","url":"https://booth.pm/ja/items/1373933","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1373933/02d25baf-9401-40e6-a69f-1a7faa4d88f2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q5XdKCWVoelMBpQUzDsH/GQecBUmEbnFTG9R/TthVfk="></script>
+    nonce="66gWS/mksLr0wqutwQQN/KoVVVBhEYqLQ6GhyrEFpWg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1373933/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               276
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1373933/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               276
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
